# hoff-cli

./: .gitignore  LICENSE  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
.virtualenv/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
commands/: __init__.py  copy.py  dotnet.py  dotnet_build.py  webpack.py
hoff/: __init__.py  __main__.py  dotnet.py  hoff.py
models/: error.py  result.py
modules/: dotnet_build.py  dotnet_clean.py  dotnet_path.py  dotnet_restore.py  dotnet_run.py  dotnet_test.py  echo.py  frontend_path.py  node_clean.py  node_restore.py  webpack_publish.py  webpack_run.py
options/: dotnet_run_options.py
tests/: context.py  test_copy.py  test_dotnet.py  test_hoff.py
tests/modules/integration/: test_dotnet_clean.py
tests/modules/unit/: test_dotnet_path.py  test_dotnet_run.py  test_dotnet_test.py  test_frontend_path.py  test_node_clean.py  test_node_restore.py  test_webpack_publish.py  test_webpack_run.py
