[metadata]
name = hoff-cli
version = 0.1.0
author = Dylan Justice
author-email = dylan@dylanjustice.com
summary = CLI Wrapper for useful development commands
description-file = README.md
home-page = https://github.com/dylancjustice/hoff-cli
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
install_requires =
    click == 8.0.1
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest

[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel

[options.packages.find]
exclude = tests

[build_sphinx]
project = Hoff Cli
release = 0.1.0
copyright = Copyright 2022 Dylan Justice
config-dir = docs

[aliases]
test=pytest
