[metadata]
name = hoff-cli
version = 0.1.2
author = Dylan Justice
author_email = dylan@dylanjustice.com
summary = CLI Wrapper for useful development commands
description_file = README.md
home_page = https://github.com/dylancjustice/hoff-cli
requires_dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
install_requires =
    click == 8.0.1
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    faker

[options.extras_require]
dev =
    pytest
    faker
    pylint
    Sphinx
    wheel
    autopep8

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    hoff = hoff.hoff:main

[build_sphinx]
project = Hoff Cli
release = 0.1.0
copyright = Copyright 2022 Dylan Justice
config_dir = docs

[aliases]
test=pytest
